--- a/app/css/style.css
+++ b/app/css/style.css
@@ -152,7 +152,7 @@ button {
   src: url("../fonts/planer-icons.eot");
   src: url("../fonts/planer-icons.eot?#iefix") format("eot"), url("../fonts/planer-icons.woff2") format("woff2"), url("../fonts/planer-icons.woff") format("woff"), url("../fonts/planer-icons.ttf") format("truetype"), url("../fonts/planer-icons.svg#planer-icons") format("svg"); }
 
-.icon-account_circle-blue:before, .icon-account_circle-grey:before, .icon-add:before, .icon-arrow:before, .icon-bell-not_active:before, .icon-bell:before, .icon-cancel:before, .icon-check:before, .icon-check_box:before, .icon-check_box_outline:before, .icon-edit-not_active:before, .icon-edit:before, .icon-list:before, .icon-lock-blue:before, .icon-lock-grey:before, .icon-logout:before, .icon-star:before, .icon-time:before, .icon-user:before, .icon-warning:before {
+.icon-cancel:before, .icon-check:before, .icon-check_box:before, .icon-check_box_outline:before, .icon-edit:before, .icon-edit-not_active:before, .icon-list:before, .icon-lock-blue:before, .icon-lock-grey:before, .icon-logout:before, .icon-star:before, .icon-time:before, .icon-user:before, .icon-warning:before, .icon-account_circle-blue:before, .icon-account_circle-grey:before, .icon-add:before, .icon-arrow:before, .icon-bell:before, .icon-bell-not_active:before {
   font-family: "planer-icons";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -162,64 +162,64 @@ button {
   text-decoration: none;
   text-transform: none; }
 
-.icon-account_circle-blue:before {
+.icon-cancel:before {
   content: ""; }
 
-.icon-account_circle-grey:before {
+.icon-check:before {
   content: ""; }
 
-.icon-add:before {
+.icon-check_box:before {
   content: ""; }
 
-.icon-arrow:before {
+.icon-check_box_outline:before {
   content: ""; }
 
-.icon-bell-not_active:before {
+.icon-edit:before {
   content: ""; }
 
-.icon-bell:before {
+.icon-edit-not_active:before {
   content: ""; }
 
-.icon-cancel:before {
+.icon-list:before {
   content: ""; }
 
-.icon-check:before {
+.icon-lock-blue:before {
   content: ""; }
 
-.icon-check_box:before {
+.icon-lock-grey:before {
   content: ""; }
 
-.icon-check_box_outline:before {
+.icon-logout:before {
   content: ""; }
 
-.icon-edit-not_active:before {
+.icon-star:before {
   content: ""; }
 
-.icon-edit:before {
+.icon-time:before {
   content: ""; }
 
-.icon-list:before {
+.icon-user:before {
   content: ""; }
 
-.icon-lock-blue:before {
+.icon-warning:before {
   content: ""; }
 
-.icon-lock-grey:before {
+.icon-account_circle-blue:before {
   content: ""; }
 
-.icon-logout:before {
+.icon-account_circle-grey:before {
   content: ""; }
 
-.icon-star:before {
+.icon-add:before {
   content: ""; }
 
-.icon-time:before {
+.icon-arrow:before {
   content: ""; }
 
-.icon-user:before {
+.icon-bell:before {
   content: ""; }
 
-.icon-warning:before {
+.icon-bell-not_active:before {
   content: ""; }
 
 .flex-container {
@@ -314,7 +314,16 @@ main {
       font-size: 1.8em; }
 
 .all-task-wrap {
-  padding: 4em 0; }
+  padding: 4em 0;
+  position: relative; }
+  .all-task-wrap::before {
+    content: '';
+    display: inline-block;
+    border: 2px dashed #00a2f4;
+    position: absolute;
+    top: 4em;
+    left: 1.8em;
+    bottom: 0; }
 
 .task {
   width: 100%;
@@ -425,15 +434,144 @@ main {
       -ms-flex-align: center;
           align-items: center; }
 
-body {
+.overlay {
+  background-color: rgba(0, 0, 0, 0.83);
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0; }
+
+.edit-task {
+  background-color: #FFF;
+  width: 100%;
+  padding: 5em 0;
+  height: auto;
+  z-index: 999999;
+  position: fixed;
+  bottom: 0; }
+  @media (min-width: 1024px) {
+    .edit-task {
+      min-height: 50vh; } }
+  @media (max-height: 630px) {
+    .edit-task {
+      top: 0;
+      overflow: auto; } }
+  .edit-task .input-group {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .edit-task .input-group.flex-container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+      @media (min-width: 1024px) {
+        .edit-task .input-group.flex-container {
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: row;
+              -ms-flex-direction: row;
+                  flex-direction: row; } }
+  .edit-task .title {
+    font-size: 1.8em;
+    color: #767676;
+    margin-bottom: 4em; }
+  .edit-task .icon-bell {
+    font-size: 2em;
+    color: #00a2f4;
+    margin-right: 1.3em; }
+  .edit-task .task-bell {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 1.6em;
+    color: #404040; }
+  .edit-task input {
+    font-size: 3em;
+    margin-top: 2em;
+    padding-left: 2.3em; }
+    @media (min-width: 1024px) {
+      .edit-task input {
+        margin-top: 0;
+        margin-left: 2em;
+        padding-left: 0; } }
+  .edit-task .textarea-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%; }
+    .edit-task .textarea-wrap label {
+      font-size: 1.4em;
+      color: #424242;
+      -webkit-box-ordinal-group: 2;
+      -webkit-order: 1;
+          -ms-flex-order: 1;
+              order: 1; }
+    .edit-task .textarea-wrap textarea {
+      -webkit-box-ordinal-group: 3;
+      -webkit-order: 2;
+          -ms-flex-order: 2;
+              order: 2;
+      border-bottom: 1px solid #9d9d9d;
+      width: 100%;
+      min-height: 6em; }
+      .edit-task .textarea-wrap textarea:focus {
+        border-color: #00a2f4; }
+        .edit-task .textarea-wrap textarea:focus + label {
+          color: #00a2f4; }
+    .edit-task .textarea-wrap .symbol-count {
+      -webkit-box-ordinal-group: 4;
+      -webkit-order: 3;
+          -ms-flex-order: 3;
+              order: 3;
+      -webkit-align-self: flex-end;
+          -ms-flex-item-align: end;
+              align-self: flex-end; }
+  .edit-task .add-task-btn {
+    background: #00a2f4;
+    padding: 2em;
+    color: #fff;
+    width: 100%; }
+    @media (min-width: 1024px) {
+      .edit-task .add-task-btn {
+        width: auto;
+        -webkit-align-self: flex-end;
+            -ms-flex-item-align: end;
+                align-self: flex-end; } }
+
+.wrap {
   background: url("../img/login-bg.jpg") no-repeat;
   background-size: cover; }
-
-.wrap .flex-container {
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  .wrap .flex-container {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
 
 .login-form {
   -webkit-border-radius: 1em;
@@ -446,9 +584,7 @@ body {
     margin-bottom: 2em; }
   .login-form .log-icon {
     font-size: 3em;
-    width: 30px;
-    color: #fff;
-    background: #a0a0a0; }
+    width: 30px; }
   .login-form input {
     font-size: 1.8em;
     border-bottom: 0.05em solid #9e9e9e;
