--- a/app/css/style.css
+++ b/app/css/style.css
@@ -325,6 +325,22 @@ main {
     left: 1.8em;
     bottom: 0; }
 
+.one-task-wrap {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+  .one-task-wrap + .one-task-wrap {
+    margin-top: 4em; }
+  @media (min-width: 1024px) {
+    .one-task-wrap {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row; } }
+
 .task {
   width: 100%;
   padding-left: 5.4em;
@@ -340,8 +356,6 @@ main {
     background: #7cbb00; }
   .task.warning .task-header {
     background: #ff5201; }
-  .task + .task {
-    margin-top: 4em; }
   .task .task-header {
     padding: 1.5em;
     background: #ffbb00;
@@ -446,7 +460,15 @@ main {
           align-items: center; }
 
 .message {
-  margin-top: 2.2em; }
+  margin-top: 2.2em;
+  margin-left: 5.8em;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  @media (min-width: 1024px) {
+    .message {
+      width: 20%; } }
   .message .warning-icon {
     font-size: 3em;
     color: #ff8248;
@@ -615,7 +637,7 @@ main {
   display: flex; }
 
 .wrap {
-  background: url("../img/login-bg.jpg") no-repeat;
+  background: url("../img/log-bg-320.jpg");
   height: 100vh;
   background-size: cover;
   -webkit-box-pack: center;
@@ -626,6 +648,11 @@ main {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center; }
+  @media (min-width: 1024px) {
+    .wrap {
+      background: url("../img/login-bg.jpg");
+      height: 100vh;
+      background-size: cover; } }
 
 .login-form {
   -webkit-border-radius: 1em;
