--- a/app/css/style.css
+++ b/app/css/style.css
@@ -634,7 +634,13 @@ main {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .log-flex + .log-flex {
+    margin-top: 2em; }
 
 .wrap {
   background: url("../img/log-bg-320.jpg");
@@ -657,35 +663,23 @@ main {
 .login-form {
   -webkit-border-radius: 1em;
           border-radius: 1em;
-  width: 29em;
   height: 33em;
   background: #fff;
   padding: 5em 2em; }
   @media (min-width: 1024px) {
     .login-form {
-      width: 35em;
-      padding: 5em 4em; } }
-  .login-form .mail-row {
-    margin-bottom: 2em;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
+      padding: 5em; } }
   .login-form .log-icon {
     font-size: 3em;
     width: 30px;
     color: #a0a0a0; }
-  .login-form .pass-row {
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
   .login-form input {
-    width: 100%;
     font-size: 1.8em;
+    width: 10.6em;
     border-bottom: 0.05em solid #9e9e9e;
     color: #bdbdbd;
-    padding: 0.8em 0.56em; }
+    padding: 0.8em 0 0.8em 0;
+    margin-left: 1.7em; }
   .login-form .button-row {
     margin-top: 4em;
     margin-bottom: 3em;
@@ -708,7 +702,14 @@ main {
     .login-form .check-row label {
       font-size: 1.4em;
       color: #bdbdbd;
-      vertical-align: middle; }
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
     .login-form .check-row input[type="checkbox"] {
       display: none; }
       .login-form .check-row input[type="checkbox"] + label {
@@ -719,7 +720,6 @@ main {
           height: 1.3em;
           width: 1.3em;
           background: url(../img/check_box_outline.svg);
-          margin-right: 1em;
-          vertical-align: middle; }
+          margin-right: 1em; }
       .login-form .check-row input[type="checkbox"]:checked + label:before {
         background: url(../img/check_box.svg); }
