--- a/app/css/style.css
+++ b/app/css/style.css
@@ -256,6 +256,13 @@ button {
         -ms-flex-pack: justify;
             justify-content: space-between; }
 
+.blue-btn {
+  background: #00a2f4;
+  -webkit-border-radius: 0.4em;
+          border-radius: 0.4em;
+  color: #fff;
+  width: 100%; }
+
 .add-task {
   width: 6em;
   height: 6em;
@@ -614,16 +621,11 @@ main {
       @media (min-width: 1024px) {
         .edit-task .textarea-wrap .symbol-count {
           display: none; } }
-  .edit-task .add-task-btn {
-    background: #00a2f4;
-    padding: .63em 3.3em;
-    font-size: 2.4em;
-    -webkit-border-radius: 0.4em;
-            border-radius: 0.4em;
-    color: #fff;
-    width: 100%; }
+  .edit-task .blue-btn {
+    padding: 0.58em 3.33em;
+    font-size: 2.4em; }
     @media (min-width: 1024px) {
-      .edit-task .add-task-btn {
+      .edit-task .blue-btn {
         width: auto;
         -webkit-align-self: flex-end;
             -ms-flex-item-align: end;
@@ -665,7 +667,9 @@ main {
           border-radius: 1em;
   height: 33em;
   background: #fff;
-  padding: 5em 2em; }
+  padding: 5em 2em;
+  -webkit-box-shadow: 0px 5px 16.17px 4.83px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 5px 16.17px 4.83px rgba(0, 0, 0, 0.08); }
   @media (min-width: 1024px) {
     .login-form {
       padding: 5em; } }
@@ -687,13 +691,10 @@ main {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center; }
-    .login-form .button-row button {
-      background: #00a1f1;
-      padding: 0.8em 5.1em;
-      -webkit-border-radius: 6px;
-              border-radius: 6px;
+    .login-form .button-row .blue-btn {
+      padding: 0.56em 0;
       font-size: 1.8em;
-      color: #fff; }
+      width: 100%; }
   .login-form .check-row {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
